--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = src/ext/jsonpickle
 	url = https://github.com/cuthbertLab/jsonpickleJS.git
 	branch = master
+[submodule "src/ext/midijs"]
+	path = src/ext/midijs
+	url = https://github.com/mscuthbert/MIDI.js.git
+	branch = master
