add soundfonts as submodule
Former-commit-id: c5a74c0fd5da54f7c44d9abee640eb20ab827420 [formerly 70022b93c3167b230581bd1eed63d731da96bbab [formerly af4f44ae34ca25e49fb32183b6242c72c860dca1]]
Former-commit-id: 65ce8cb998f24557f0df855a263cb9f62e89c371
Former-commit-id: 0a5c438ca06c10b53e76d2c1c9403828925ddc5b

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,7 @@
 	path = src/ext/midijs
 	url = https://github.com/mscuthbert/MIDI.js.git
 	branch = master
+[submodule "src/ext/soundfonts"]
+	path = src/ext/soundfonts
+	url = https://github.com/cuthbertLab/midi-js-soundfonts.git
+	branch = master
