--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "music21j",
-  "version": "0.3.0",
+  "version": "0.7.0",
   "description": "Toolkit for computer-aided musicology, Javascript version",
   "main": "src/music21",
   "files": [
@@ -11,7 +11,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-jsdoc": "~0.6.8",
-    "grunt-shell": "~1.1.2",
+    "grunt-shell": "^1.1.2",
     "jsdoc": "^3.3.2"
   },
   "directories": {
