--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-uglify": "^0.9.1",
-    "grunt-jsdoc": "~0.6.8",
+    "grunt-jsdoc": "^0.6.8",
     "grunt-shell": "^1.1.2",
     "jsdoc": "^3.3.2"
   },
