--- a/package.json
+++ b/package.json
@@ -8,22 +8,40 @@
     "src/music21/*.js"
   ],
   "devDependencies": {
-    "babel-preset-es2015-rollup": "^1.1.1",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-object-assign": "^6.8.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2015-loose": "^7.0.0",
+    "browserify": "^13.0.1",
+    "docco": "^0.7.0",
+    "eslint": "^3.0.1",
+    "eslint-config-airbnb-base": "^4.0.0",
+    "eslint-plugin-import": "^1.9.2",
+    "glob": "^7.0.5",
     "grunt": "^1.0.1",
-    "grunt-bump": "0.8.0",    
+    "grunt-bump": "0.8.0",
+    "grunt-cli": "^1.2.0",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-docco": "*",
     "grunt-contrib-qunit": "^1.2.0",
-    "grunt-contrib-uglify": "^1.0.1",
+    "grunt-contrib-uglify": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",    
+    "grunt-eslint": "^19.0.0",
+    "grunt-git": "^1.0.0",
     "grunt-jsdoc": "^2.1.0",
     "grunt-release": "^0.14.0",
-    "grunt-rollup": "^0.7.1",    
-    "grunt-shell": "^1.3.0",
+    "grunt-webpack": "^1.0.11",
     "jsdoc": "^3.4.0",
-    "jquery": "^3.0.0",
+    "jquery": "^3.1.0",
     "qunit": "^0.9.1",
-    "rollup-plugin-babel": "^2.6.1"
+    "slimerjs": "*",
+    "webpack": "*",
+    
+    "webpack-dev-server": "^1.14.1"
+
   },
   "directories": {
     "test": "tests"
@@ -38,7 +56,8 @@
   "keywords": [
     "music",
     "theory",
-    "musicology"
+    "musicology",
+    "notation"
   ],
   "author": {
     "name": "Michael Scott Cuthbert and cuthbertLab",
