--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "babel-loader": "^6.2.4",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-object-assign": "^6.8.0",
+    "babel-plugin-undeclared-variables-check": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2015-loose": "^7.0.0",
+    "babel-preset-es2015-rollup": "^1.2.0",
     "browserify": "^13.0.1",
     "docco": "^0.7.0",
     "eslint": "^3.0.1",
@@ -28,20 +30,20 @@
     "grunt-contrib-docco": "*",
     "grunt-contrib-qunit": "^1.2.0",
     "grunt-contrib-uglify": "^2.0.0",
-    "grunt-contrib-watch": "^1.0.0",    
+    "grunt-contrib-watch": "^1.0.0",
     "grunt-eslint": "^19.0.0",
     "grunt-git": "^1.0.0",
     "grunt-jsdoc": "^2.1.0",
     "grunt-release": "^0.14.0",
     "grunt-webpack": "^1.0.11",
-    "jsdoc": "^3.4.0",
     "jquery": "^3.1.0",
+    "jsdoc": "^3.4.0",
     "qunit": "^0.9.1",
+    "rollup": "^0.34.10",
+    "rollup-plugin-babel": "^2.6.1",
     "slimerjs": "*",
     "webpack": "*",
-    
     "webpack-dev-server": "^1.14.1"
-
   },
   "directories": {
     "test": "tests"
@@ -63,7 +65,7 @@
     "name": "Michael Scott Cuthbert and cuthbertLab",
     "email": "cuthbert@mit.edu",
     "url": "http://www.trecento.com"
-  }, 
+  },
   "license": "BSD-3-Clause",
   "bugs": {
     "url": "https://github.com/cuthbertLab/music21j/issues"
