--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "src/*.js",
     "src/music21/*.js"
   ],
+  "dependencies": {
+    "jquery": "^3.1.0",
+  },
   "devDependencies": {
     "babel-loader": "^6.2.4",
     "babel-plugin-add-module-exports": "^0.2.1",
@@ -17,7 +20,7 @@
     "babel-preset-es2015-rollup": "^1.2.0",
     "browserify": "^13.0.1",
     "docco": "^0.7.0",
-    "eslint": "^3.0.1",
+    "eslint": "^3.4.0",
     "eslint-config-airbnb-base": "^4.0.0",
     "eslint-plugin-import": "^1.9.2",
     "glob": "^7.0.5",
@@ -36,7 +39,6 @@
     "grunt-jsdoc": "^2.1.0",
     "grunt-release": "^0.14.0",
     "grunt-webpack": "^1.0.11",
-    "jquery": "^3.1.0",
     "jsdoc": "^3.4.0",
     "qunit": "^0.9.1",
     "rollup": "^0.34.10",
