--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "src/music21/*.js"
   ],
   "dependencies": {
-    "jquery": "^3.1.0",
+    "jquery": "^3.1.0"
   },
   "devDependencies": {
     "babel-loader": "^6.2.4",
