--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
   "rules": {
     "dot-notation": ["error", {"allowKeywords": false}],
     "indent": ["error", 4],
+    "curly": ["error", "all"],
     "camelcase": [0],
     "max-len": [0],
     "new-cap": [0],
