--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "music21j",
-  "version": "0.9",
+  "version": "0.9.0",
   "description": "A toolkit for computer-aided musicology, Javascript version",
   "main": "src/music21",
   "files": [
@@ -20,7 +20,7 @@
     "babel-preset-es2015-loose": "^7.0.0",
     "babel-preset-es2015-rollup": "^1.2.0",
     "browserify": "^13.1.0",
-    "docco": "^0.7.0",
+    "chalk": "^1.1.3",
     "eslint": "^3.4.0",
     "eslint-config-airbnb-base": "^5.0.3",
     "eslint-plugin-import": "^1.14.0",
@@ -31,7 +31,6 @@
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-docco": "*",
     "grunt-contrib-qunit": "^1.2.0",
     "grunt-contrib-uglify": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
@@ -39,14 +38,12 @@
     "grunt-git": "^1.0.0",
     "grunt-jsdoc": "^2.1.0",
     "grunt-release": "^0.14.0",
-    "grunt-webpack": "^1.0.14",
+    "grunt-rollup": "^0.8.0",
     "jsdoc": "^3.4.0",
     "qunit": "^0.9.1",
     "rollup": "^0.34.13",
     "rollup-plugin-babel": "^2.6.1",
-    "slimerjs": "*",
-    "webpack": "*",
-    "webpack-dev-server": "^1.15.1"
+    "uglify": "^0.1.5"
   },
   "directories": {
     "test": "tests"
