--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-plugin-external-helpers": "^6.8.0",
     "babel-plugin-transform-object-assign": "^6.8.0",
     "babel-plugin-undeclared-variables-check": "^6.8.0",
+    "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-es2015-loose": "^7.0.0",
     "babel-preset-es2015-rollup": "^1.2.0",
