really good recording test

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
       "WithStatement"
     ],
     "no-shadow": [0],
+    "no-trailing-spaces": [0],
     "no-use-before-define": [0],
     "no-underscore-dangle": [0],
     "no-unused-vars": ["error", {"args": "none",
