--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "qunit": "^0.9.1",
     "rollup": "^0.34.13",
     "rollup-plugin-babel": "^2.6.1",
-    "uglify": "^0.1.5"
+    "uglify": "^0.1.5",
+    "webpack": "^2.1.0-beta.25"
   },
   "directories": {
     "test": "tests"
