add updateGit for the submodules

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,16 +5,17 @@
     "browser": true
   },
   "rules": {
-    "dot-notation": ["error", {"allowKeywords": false}],
-    "comma-dangle": [0],
-    "indent": ["error", 4],
-    "curly": ["error", "all"],
     "camelcase": [0],
-    "max-len": [0],
-    "new-cap": [0],
+    "comma-dangle": [0],
+    "curly": ["error", "all"],
+    "dot-location": [2, "property"],
+    "dot-notation": ["error", {"allowKeywords": false}],
+    "indent": ["error", 4],
     "import/prefer-default-export": [0],
     "import/no-unresolved" : [0],
     "import/no-extraneous-dependencies" : [0],
+    "max-len": [0],
+    "new-cap": [0],
     "no-case-declarations": [2],
     "no-console": [0],
     "no-continue": [0],
