--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,13 +5,17 @@
     "browser": true
   },
   "rules": {
+    "arrow-parens": [0],
     "camelcase": [0],
+    "class-methods-use-this": [0],
     "comma-dangle": [0],
     "curly": ["error", "all"],
     "dot-location": [2, "property"],
     "dot-notation": ["error", {"allowKeywords": false}],
     "indent": ["error", 4],
+    "import/extensions": [0],
     "import/prefer-default-export": [0],
+    "import/no-named-as-default-member": [0],
     "import/no-unresolved" : [0],
     "import/no-extraneous-dependencies" : [0],
     "max-len": [0],
@@ -24,6 +28,7 @@
     "no-mixed-operators": [0],
     "no-multi-spaces": [0],
     "no-param-reassign": [0],
+    "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
     "no-restricted-syntax": [
       2,
       "DebuggerStatement",
