--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "grunt-rollup": "^0.8.0",
     "js-doc": "^0.5.0",
     "jsdoc": "^3.5.4",
+    "npm-check-updates": "^2.12.1",
     "qunit": "^0.9.1",
     "rollup": "^0.34.13",
     "rollup-plugin-babel": "^2.6.1",
