--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,52 +1,58 @@
 {
-  "extends": "airbnb-base",
-  "root": true,
-  "env": {
-    "browser": true
-  },
-  "rules": {
-    "arrow-parens": [0],
-    "camelcase": [0],
-    "class-methods-use-this": [0],
-    "comma-dangle": [0],
-    "curly": ["error", "all"],
-    "dot-location": [2, "property"],
-    "dot-notation": ["error", {"allowKeywords": false}],
-    "indent": ["error", 4],
-    "import/extensions": [0],
-    "import/prefer-default-export": [0],
-    "import/no-named-as-default-member": [0],
-    "import/no-unresolved" : [0],
-    "import/no-extraneous-dependencies" : [0],
-    "max-len": [0],
-    "new-cap": [0],
-    "no-case-declarations": [2],
-    "no-console": [0],
-    "no-continue": [0],
-    "no-confusing-arrow": [0],
-    "no-else-return": [0],
-    "no-mixed-operators": [0],
-    "no-multi-spaces": [0],
-    "no-param-reassign": [0],
-    "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
-    "no-restricted-syntax": [
-      2,
-      "DebuggerStatement",
-      "LabeledStatement",
-      "WithStatement"
-    ],
-    "no-shadow": [0],
-    "no-trailing-spaces": [0],
-    "no-use-before-define": [0],
-    "no-underscore-dangle": [0],
-    "no-unused-vars": ["error", {"args": "none",
-                                 "varsIgnorePattern": "^i$|^j$|^unused|^junk|^counter"}],
-    "object-property-newline": [0],
-    "prefer-template": [0],    
-    "quote-props": [0],
-    "radix": [0],
-    "space-before-function-paren": [2, "never"],
-    "strict": [2, "global"],
-    "yoda": [2, "never", { "exceptRange": true }]
-  }
+    "extends": "airbnb-base",
+    "root": true,
+    "env": {
+        "browser": true
+    },
+    "rules": {
+        "arrow-parens": [0],
+        "camelcase": [0],
+        "class-methods-use-this": [0],
+        "comma-dangle": ["error", "always-multiline"],
+        "curly": ["error", "all"],
+        "dot-location": [2, "property"],
+        "dot-notation": ["error", { "allowKeywords": false }],
+        "indent": ["error", 4],
+        "import/extensions": [0],
+        "import/prefer-default-export": [0],
+        "import/no-named-as-default-member": [0],
+        "import/no-unresolved": [0],
+        "import/no-extraneous-dependencies": [0],
+        "max-len": [0],
+        "new-cap": [0],
+        "no-case-declarations": [2],
+        "no-console": [0],
+        "no-continue": [0],
+        "no-confusing-arrow": [0],
+        "no-else-return": [0],
+        "no-mixed-operators": [0],
+        "no-multi-spaces": [0],
+        "no-param-reassign": [0],
+        "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
+        "no-restricted-syntax": [
+            2,
+            "DebuggerStatement",
+            "LabeledStatement",
+            "WithStatement"
+        ],
+        "no-shadow": [0],
+        "no-trailing-spaces": [0],
+        "no-use-before-define": [0],
+        "no-underscore-dangle": [0],
+        "no-unused-vars": [
+            "error",
+            {
+                "args": "none",
+                "varsIgnorePattern": "^i$|^j$|^unused|^junk|^counter"
+            }
+        ],
+        "object-property-newline": [0],
+        "operator-linebreak": ["error", "before"],
+        "prefer-template": [0],
+        "quote-props": [0],
+        "radix": [0],
+        "space-before-function-paren": [2, "never"],
+        "strict": [2, "global"],
+        "yoda": [2, "never", { "exceptRange": true }]
+    }
 }
