stream.set -- equivalent to python __setitem__

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,10 +5,11 @@
         "browser": true
     },
     "rules": {
-        "arrow-parens": [0],
-        "brace-style": [0],
-        "camelcase": [0],
-        "class-methods-use-this": [0],
+        "array-bracket-spacing": ["off"],
+        "arrow-parens": ["off"],
+        "brace-style": ["off"],
+        "camelcase": ["off"],
+        "class-methods-use-this": ["off"],
         "comma-dangle": ["error", {
      	   "arrays": "only-multiline",
            "objects": "always-multiline",
@@ -17,26 +18,27 @@
            "functions": "ignore"
     	   }],
         "curly": ["error", "all"],
-        "dot-location": [2, "property"],
+        "dot-location": ["error", "property"],
         "dot-notation": ["error"],
         "indent": ["error", 4],
-        "import/extensions": [0],
-        "import/prefer-default-export": [0],
-	"import/no-named-as-default": [0],
-        "import/no-named-as-default-member": [0],
-        "import/no-unresolved": [0],
-        "import/no-extraneous-dependencies": [0],
-        "max-len": [0],
-        "new-cap": [0],
-        "no-case-declarations": [2],
-        "no-console": [0],
-        "no-continue": [0],
-        "no-confusing-arrow": [0],
-        "no-else-return": [0],
-        "no-lonely-if": [0],
-        "no-mixed-operators": [0],
-        "no-multi-spaces": [0],
-        "no-param-reassign": [0],
+        "import/extensions": ["off"],
+        "import/prefer-default-export": ["off"],
+	"import/no-named-as-default": ["off"],
+        "import/no-named-as-default-member": ["off"],
+        "import/no-unresolved": ["off"],
+        "import/no-extraneous-dependencies": ["off"],
+        "max-len": ["off"],
+        "new-cap": ["off"],
+        "no-case-declarations": ["error"],
+        "no-console": ["off"],
+        "no-continue": ["off"],
+        "no-confusing-arrow": ["off"],
+        "no-else-return": ["off"],
+        "no-lonely-if": ["off"],
+        "no-mixed-operators": ["off"],
+        "no-multi-spaces": ["off"],
+        "no-multiple-empty-lines": ["error", { "max": 3 }],
+        "no-param-reassign": ["off"],
         "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
         "no-restricted-syntax": [
             2,
@@ -44,10 +46,10 @@
             "LabeledStatement",
             "WithStatement"
         ],
-        "no-shadow": [0],
-        "no-trailing-spaces": [0],
-        "no-use-before-define": [0],
-        "no-underscore-dangle": [0],
+        "no-shadow": ["off"],
+        "no-trailing-spaces": ["off"],
+        "no-use-before-define": ["off"],
+        "no-underscore-dangle": ["off"],
         "no-unused-vars": [
             "error",
             {
@@ -55,14 +57,16 @@
                 "varsIgnorePattern": "^i$|^j$|^unused|^junk|^counter"
             }
         ],
-        "object-property-newline": [0],
+        "object-curly-spacing": ["off"],
+        "object-property-newline": ["off"],
         "operator-linebreak": ["error", "before"],
-        "padded-blocks": [0],
-        "prefer-template": [0],
-        "quote-props": [0],
-        "radix": [0],
-        "space-infix-ops": [0],
-	"strict": [2, "global"],
-        "yoda": [2, "never", { "exceptRange": true }]
+        "padded-blocks": ["off"],
+        "prefer-template": ["off"],
+        "quote-props": ["off"],
+        "radix": ["off"],
+        "space-infix-ops": ["off"],
+        "spaced-comment": ["off"],
+        "strict": ["error", "global"],
+        "yoda": ["error", "never", { "exceptRange": true }]
     }
 }
