working towards webpack...

--- a/package.json
+++ b/package.json
@@ -8,48 +8,41 @@
     "src/music21/*.js"
   ],
   "dependencies": {
-    "jquery": "^3.1.0"
+    "es6-shim": "^0.35.5",
+    "jquery": "^3.4.1",
+    "vexflow": "^1.2.89"
   },
   "devDependencies": {
-    "babel": "^6.23.0",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-external-helpers": "^6.8.0",
-    "babel-plugin-transform-object-assign": "^6.8.0",
-    "babel-plugin-undeclared-variables-check": "^6.8.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-es2015-loose": "^7.0.0",
-    "babel-preset-es2015-rollup": "^1.2.0",
-    "babel-runtime": "^6.26.0",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-transform-object-assign": "^7.2.0",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.5.5",
+    "babel-loader": "^8.0.6",
     "browserify": "^13.1.0",
     "chalk": "^1.1.3",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^5.0.3",
     "eslint-plugin-import": "^1.14.0",
-    "glob": "^7.0.6",
-    "grunt": "^1.0.1",
+    "glob": "^7.1.4",
+    "grunt": "^1.0.4",
     "grunt-bump": "0.8.0",
-    "grunt-cli": "^1.2.0",
+    "grunt-cli": "^1.3.2",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-qunit": "^1.3.0",
     "grunt-contrib-uglify": "^2.3.0",
-    "grunt-contrib-watch": "^1.0.0",
+    "grunt-contrib-watch": "^1.1.0",
     "grunt-eslint": "^19.0.0",
-    "grunt-git": "^1.0.6",
-    "grunt-jsdoc": "^2.1.0",
-    "grunt-release": "^0.14.0",
+    "grunt-git": "^1.0.14",
+    "grunt-jsdoc": "^2.4.0",
     "grunt-rollup": "^0.8.0",
-    "js-doc": "^0.5.0",
-    "jsdoc": "^3.5.5",
-    "npm-check-updates": "^2.12.1",
-    "qunit": "^0.9.1",
+    "grunt-webpack": "^3.1.3",
+    "jsdoc": "^3.6.3",
+    "npm-check-updates": "^3.1.20",
+    "qunit": "^2.9.2",
     "rollup": "^0.34.13",
     "rollup-plugin-babel": "^2.6.1",
-    "uglify": "^0.1.5",
-    "update": "^0.7.4",
     "webpack": "^2.7.0"
   },
   "directories": {
