--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-export-namespace-from": "^7.5.2",
     "@babel/plugin-transform-object-assign": "^7.2.0",
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.5.5",
@@ -23,6 +24,7 @@
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^5.0.3",
     "eslint-plugin-import": "^1.14.0",
+    "exports-loader": "^0.7.0",
     "glob": "^7.1.4",
     "grunt": "^1.0.4",
     "grunt-bump": "0.8.0",
