--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "music21j",
-  "version": "0.9.11",
+  "version": "0.9.12",
   "description": "A toolkit for computer-aided musicology, Javascript version",
   "main": "releases/music21.debug.js",
   "files": [
@@ -25,6 +25,7 @@
     "es6-shim": "^0.35.5",
     "jquery": "^3.4.1",
     "jquery-ui-bundle": "^1.12.1-migrate",
+    "jsonpickle": "^1.1.0",
     "midicube": "^0.5.5",
     "vexflow": "^1.2.89"
   },
@@ -34,6 +35,7 @@
     "@babel/plugin-transform-object-assign": "^7.2.0",
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.5.5",
+    "ajv": "^6.10.2",
     "babel-loader": "^8.0.6",
     "browserify": "^13.1.0",
     "chalk": "^1.1.3",
@@ -63,7 +65,7 @@
     "rollup": "^0.34.13",
     "rollup-plugin-babel": "^2.6.1",
     "style-loader": "^0.23.1",
-    "webpack": "^2.7.0"
+    "webpack": "^4.37.0"
   },
   "directories": {
     "test": "tests"
