--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,10 +23,11 @@
         "indent": ["error", 4],
         "import/extensions": ["off"],
         "import/prefer-default-export": ["off"],
-	"import/no-named-as-default": ["off"],
+	    "import/no-named-as-default": ["off"],
         "import/no-named-as-default-member": ["off"],
         "import/no-unresolved": ["off"],
         "import/no-extraneous-dependencies": ["off"],
+        "lines-between-class-members": ["error", "always", { "exceptAfterSingleLine": true }],
         "max-len": ["off"],
         "new-cap": ["off"],
         "no-case-declarations": ["error"],
@@ -61,6 +62,7 @@
         "object-property-newline": ["off"],
         "operator-linebreak": ["error", "before"],
         "padded-blocks": ["off"],
+        "prefer-destructuring": ["off"],
         "prefer-template": ["off"],
         "quote-props": ["off"],
         "radix": ["off"],
