--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "music21j",
-  "version": "0.9.12",
+  "version": "0.9.14",
   "description": "A toolkit for computer-aided musicology, Javascript version",
-  "main": "releases/music21.debug.js",
+  "main": "src/music21_modules.js",
   "files": [
     ".editorconfig",
     ".eslintignore",
@@ -23,6 +23,7 @@
   ],
   "dependencies": {
     "es6-shim": "^0.35.5",
+    "grunt-contrib-qunit": "^3.1.0",
     "jquery": "^3.4.1",
     "jquery-ui-bundle": "^1.12.1-migrate",
     "jsonpickle": "^1.1.0",
@@ -37,35 +38,27 @@
     "@babel/preset-env": "^7.5.5",
     "ajv": "^6.10.2",
     "babel-loader": "^8.0.6",
-    "browserify": "^13.1.0",
-    "chalk": "^1.1.3",
+    "browserify": "^16.3.0",
     "css-loader": "^3.1.0",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb-base": "^5.0.3",
-    "eslint-plugin-import": "^1.14.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.2.0",
+    "eslint-plugin-import": "^2.18.2",
     "exports-loader": "^0.7.0",
     "glob": "^7.1.4",
     "grunt": "^1.0.4",
     "grunt-bump": "0.8.0",
     "grunt-cli": "^1.3.2",
-    "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-qunit": "^1.3.0",
-    "grunt-contrib-uglify": "^2.3.0",
     "grunt-contrib-watch": "^1.1.0",
-    "grunt-eslint": "^19.0.0",
+    "grunt-eslint": "^22.0.0",
     "grunt-git": "^1.0.14",
     "grunt-jsdoc": "^2.4.0",
-    "grunt-rollup": "^0.8.0",
     "grunt-webpack": "^3.1.3",
     "jsdoc": "^3.6.3",
     "npm-check-updates": "^3.1.20",
     "qunit": "^2.9.2",
-    "rollup": "^0.34.13",
-    "rollup-plugin-babel": "^2.6.1",
     "style-loader": "^0.23.1",
-    "webpack": "^4.37.0"
+    "webpack": "^4.38.0"
   },
   "directories": {
     "test": "tests"
