--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "music21j",
-  "version": "0.9.14",
+  "version": "0.9.15",
   "description": "A toolkit for computer-aided musicology, Javascript version",
   "main": "src/music21_modules.js",
   "files": [
@@ -23,7 +23,6 @@
   ],
   "dependencies": {
     "es6-shim": "^0.35.5",
-    "grunt-contrib-qunit": "^3.1.0",
     "jquery": "^3.4.1",
     "jquery-ui-bundle": "^1.12.1-migrate",
     "jsonpickle": "^1.1.0",
@@ -49,6 +48,7 @@
     "grunt-bump": "0.8.0",
     "grunt-cli": "^1.3.2",
     "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-qunit": "^3.1.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-eslint": "^22.0.0",
     "grunt-git": "^1.0.14",
@@ -86,5 +86,6 @@
   "license": "BSD-3-Clause",
   "bugs": {
     "url": "https://github.com/cuthbertLab/music21j/issues"
-  }
+  },
+  "type": "module"
 }
