--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "music21j",
-  "version": "0.9.15",
+  "version": "0.9.23",
   "description": "A toolkit for computer-aided musicology, Javascript version",
-  "main": "src/music21_modules.js",
+  "main": "releases/music21.debug.js",
   "files": [
     ".editorconfig",
     ".eslintignore",
@@ -34,11 +34,11 @@
     "@babel/core": "^7.5.5",
     "@babel/plugin-proposal-export-namespace-from": "^7.5.2",
     "@babel/plugin-transform-object-assign": "^7.2.0",
-    "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.5.5",
     "ajv": "^6.10.2",
     "babel-loader": "^8.0.6",
     "browserify": "^16.3.0",
+    "core-js": "^3.2.1",
     "css-loader": "^3.1.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.2.0",
