--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "music21j",
-  "version": "0.9.23",
+  "version": "0.9.24",
   "description": "A toolkit for computer-aided musicology, Javascript version",
-  "main": "releases/music21.debug.js",
+  "main": "src/music21_modules.js",
   "files": [
     ".editorconfig",
     ".eslintignore",
@@ -22,12 +22,11 @@
     "/webResources"
   ],
   "dependencies": {
-    "es6-shim": "^0.35.5",
     "jquery": "^3.4.1",
     "jquery-ui-bundle": "^1.12.1-migrate",
-    "jsdoc": "^3.6.3",
     "jsonpickle": "^1.1.0",
     "midicube": "^0.5.5",
+    "regenerator-runtime": "^0.13.3",
     "vexflow": "^1.2.89"
   },
   "devDependencies": {
@@ -55,6 +54,7 @@
     "grunt-git": "^1.0.14",
     "grunt-jsdoc": "^2.4.0",
     "grunt-webpack": "^3.1.3",
+    "jsdoc": "^3.6.3",
     "npm-check-updates": "^3.1.20",
     "qunit": "^2.9.2",
     "style-loader": "^0.23.1",
