--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,16 @@
 {
-    "extends": "airbnb-base",
+    "extends": [
+        "airbnb-base"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "plugins": ["@typescript-eslint"],
     "root": true,
     "env": {
         "browser": true
     },
     "rules": {
         "array-bracket-spacing": ["off"],
+        "arrow-body-style": ["off"],
         "arrow-parens": ["off"],
         "brace-style": ["off"],
         "camelcase": ["off"],
@@ -20,15 +25,26 @@
         "curly": ["error", "all"],
         "dot-location": ["error", "property"],
         "dot-notation": ["error"],
-        "indent": ["error", 4],
+        "function-paren-newline": ["warn"],
+        "indent": ["error", 4, {
+            "ignoredNodes": ["TemplateLiteral > *.expressions"]
+        }],
         "import/extensions": ["off"],
         "import/prefer-default-export": ["off"],
 	    "import/no-named-as-default": ["off"],
         "import/no-named-as-default-member": ["off"],
         "import/no-unresolved": ["off"],
         "import/no-extraneous-dependencies": ["off"],
-        "lines-between-class-members": ["error", "always", { "exceptAfterSingleLine": true }],
-        "max-len": ["off"],
+        "lines-between-class-members": ["warn", "always", {
+            "exceptAfterSingleLine": true
+        }],
+        "max-classes-per-file": ["off"],
+        "max-len": ["warn", {
+            "code": 120,
+            "ignoreUrls": true,
+            "ignoreTemplateLiterals": true,
+            "ignoreTrailingComments": true
+        }],
         "new-cap": ["off"],
         "no-case-declarations": ["error"],
         "no-console": ["off"],
@@ -47,6 +63,7 @@
             "LabeledStatement",
             "WithStatement"
         ],
+        "no-return-assign": ["warn", "except-parens"],
         "no-shadow": ["off"],
         "no-trailing-spaces": ["off"],
         "no-use-before-define": ["off"],
@@ -55,17 +72,32 @@
             "error",
             {
                 "args": "none",
-                "varsIgnorePattern": "^i$|^j$|^unused|^junk|^counter"
+                "varsIgnorePattern": "^_.*|^i$|^j$|^unused|^junk|^counter"
+            }
+        ],
+        "@typescript-eslint/no-unused-vars": [
+            "error",
+            {
+                "args": "none",
+                "varsIgnorePattern": "^_.*|^i$|^j$|^unused|^junk|^counter"
             }
         ],
         "object-curly-spacing": ["off"],
         "object-property-newline": ["off"],
-        "operator-linebreak": ["error", "before"],
+        "operator-linebreak": ["off"],
         "padded-blocks": ["off"],
+        "prefer-const": [
+            "error",
+            {
+                 "destructuring": "all"
+            }
+        ],
         "prefer-destructuring": ["off"],
+        "prefer-object-spread": ["warn"],
         "prefer-template": ["off"],
         "quote-props": ["off"],
         "radix": ["off"],
+        "semi-style": ["warn"],
         "space-infix-ops": ["off"],
         "spaced-comment": ["off"],
         "strict": ["error", "global"],
