--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "music21j",
-  "version": "0.9.30",
+  "version": "0.9.31",
   "description": "A toolkit for computer-aided musicology, Javascript version",
   "main": "src/music21_modules.js",
   "files": [
@@ -38,11 +38,13 @@
     "@typescript-eslint/eslint-plugin": "^2.3.0",
     "@typescript-eslint/parser": "^2.3.0",
     "ajv": "^6.10.2",
+    "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "core-js": "^3.2.1",
     "css-loader": "^3.2.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.2.0",
+    "eslint-loader": "^3.0.0",
     "eslint-plugin-import": "^2.18.2",
     "exports-loader": "^0.7.0",
     "glob": "^7.1.4",
