--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "music21j",
-  "version": "0.9.59",
+  "version": "0.10.1",
   "description": "A toolkit for computer-aided musicology, Javascript version",
   "main": "src/music21_modules.js",
   "files": [
@@ -25,48 +25,46 @@
     "jquery-ui-bundle": "^1.12.1-migrate",
     "jsonpickle": "^1.1.2",
     "midicube": "^0.6.1",
-    "regenerator-runtime": "^0.13.7",
     "vexflow": "1.2.90"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-proposal-export-namespace-from": "^7.12.1",
-    "@babel/plugin-transform-object-assign": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
+    "@babel/core": "^7.12.17",
+    "@babel/eslint-parser": "7.12.17",
+    "@babel/plugin-proposal-class-properties": "^7.12.13",
+    "@babel/plugin-proposal-export-namespace-from": "^7.12.13",
+    "@babel/plugin-transform-object-assign": "^7.12.13",
+    "@babel/preset-env": "^7.12.17",
     "@types/qunit": "^2.11.1",
-    "@types/jquery": "^3.5.3",
-    "@typescript-eslint/eslint-plugin": "^2.7.0",
-    "@typescript-eslint/parser": "^2.7.0",
-    "ajv": "^6.12.6",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
-    "cache-loader": "^4.1.0",
-    "core-js": "^3.6.5",
-    "css-loader": "^3.2.0",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.2.0",
-    "eslint-loader": "^3.0.0",
+    "@types/jquery": "^3.5.5",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^4.15.1",
+    "ajv": "^7.1.1",
+    "babel-loader": "^8.2.1",
+    "core-js": "^3.9.0",
+    "css-loader": "^5.0.2",
+    "eslint": "^7.20.0",
+    "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-webpack-plugin": "^2.5.2",
     "exports-loader": "^0.7.0",
     "glob": "^7.1.6",
     "grunt": "^1.3.0",
     "grunt-bump": "0.8.0",
     "grunt-cli": "^1.3.2",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-qunit": "^3.1.0",
+    "grunt-contrib-qunit": "^4.0.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-eslint": "^23.0.0",
     "grunt-git": "^1.0.14",
     "grunt-jsdoc": "^2.4.1",
-    "grunt-webpack": "^3.1.3",
+    "grunt-webpack": "^4.0.2",
     "jsdoc": "^3.6.6",
     "npm-check-updates": "^9.1.0",
-    "qunit": "^2.11.3",
-    "style-loader": "^0.23.1",
-    "ts-loader": "^6.2.1",
-    "typescript": "^3.7.2",
-    "webpack": "^4.41.2"
+    "qunit": "^2.14.0",
+    "style-loader": "^1.3.0",
+    "ts-loader": "^8.0.17",
+    "typescript": "^4.1.5",
+    "webpack": "^5.23.0"
   },
   "directories": {
     "test": "tests"
