--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "music21j",
-  "version": "0.11.1",
+  "version": "0.11.7",
   "description": "A toolkit for computer-aided musicology, Javascript version",
-  "main": "src/music21_modules.js",
+  "main": "releases/music21.debug.js",
+  "typings": "index.d.ts",
   "files": [
     ".editorconfig",
     ".eslintignore",
@@ -34,14 +35,15 @@
     "@babel/plugin-proposal-export-namespace-from": "^7.12.13",
     "@babel/plugin-transform-object-assign": "^7.12.13",
     "@babel/preset-env": "^7.12.17",
-    "@types/qunit": "^2.11.1",
     "@types/jquery": "^3.5.5",
+    "@types/qunit": "^2.11.1",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "ajv": "^7.1.1",
     "babel-loader": "^8.2.1",
     "core-js": "^3.9.0",
     "css-loader": "^5.0.2",
+    "dts-bundle-generator": "^5.9.0",
     "eslint": "^7.20.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
@@ -60,6 +62,7 @@
     "grunt-webpack": "^4.0.2",
     "jsdoc": "^3.6.6",
     "npm-check-updates": "^9.1.0",
+    "npm-dts": "^1.3.9",
     "qunit": "^2.14.0",
     "style-loader": "^1.3.0",
     "ts-loader": "^8.0.17",
@@ -70,7 +73,7 @@
     "test": "tests"
   },
   "scripts": {
-    "prepublishOnly": "cp build/* releases/",
+    "prepublishOnly": "./node_modules/.bin/npm-dts generate --entry src/music21.ts --output build/music21.d.ts; cp build/* releases/",
     "postinstall": "sh scripts/postinstall.bash",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
