Fix package entry-point and publish type declarations
Co-authored-by: Matteo Bernardini <mat_teobe@yahoo.it>

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,7 @@
 node_modules/
 node_modules/grunt/package.json
 
-build/*.js
-build/*.map
+build/
 
 tests/music21.tests.js
 tests/music21.tests.js.map
