--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "jquery": "^3.5.1",
     "jsonpickle": "^1.1.2",
     "midicube": "^0.6.1",
-    "vexflow": "1.2.90"
+    "vexflow": "https://vexflow-demo.surge.sh/vexflow-4.0.0-alpha-6.tgz"
   },
   "devDependencies": {
     "@babel/core": "^7.12.17",
@@ -39,7 +39,6 @@
     "@typescript-eslint/parser": "^4.15.1",
     "ajv": "^7.1.1",
     "babel-loader": "^8.2.1",
-    "core-js": "^3.9.0",
     "css-loader": "^5.0.2",
     "eslint": "^7.20.0",
     "eslint-config-airbnb-base": "^14.2.1",
