--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "jquery": "^3.5.1",
     "jsonpickle": "^1.1.2",
     "midicube": "^0.6.1",
-    "vexflow": "https://vexflow-demo.surge.sh/vexflow-4.0.0-alpha-6.tgz"
+    "vexflow": "https://vexflow-demo.surge.sh/4.0.0-beta.tgz"
   },
   "devDependencies": {
     "@babel/core": "^7.12.17",
@@ -60,16 +60,16 @@
     "npm-check-updates": "^9.1.0",
     "qunit": "^2.14.0",
     "style-loader": "^1.3.0",
-    "ts-loader": "^8.0.17",
-    "typescript": "^4.1.5",
-    "webpack": "^5.23.0"
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.5.2",
+    "webpack": "^5.65.0"
   },
   "directories": {
     "test": "tests"
   },
   "scripts": {
     "prepublishOnly": "cp -rp build/* releases/",
-    "postinstall": "sh scripts/postinstall.bash",
+    "__postinstall": "sh scripts/postinstall.bash",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
