--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "jquery": "^3.5.1",
     "jsonpickle": "^1.1.2",
     "midicube": "^0.6.1",
-    "vexflow": "https://vexflow-demo.surge.sh/vexflow-4.0.1-beta-2022-01-13.tgz"
+    "vexflow": "^4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.17",
