--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "music21j",
-  "version": "0.13.3",
+  "version": "0.13.4",
   "description": "A toolkit for computer-aided musicology, Javascript version",
   "main": "releases/music21.debug.js",
   "typings": "releases/main.d.ts",
@@ -24,7 +24,7 @@
     "jquery": "^3.6.1",
     "jsonpickle": "^1.1.2",
     "midicube": "^0.6.1",
-    "vexflow": "4.1.0"
+    "vexflow": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.5",
