Explicitly use Bravura
Also alters some font metrics so that they better match default styles.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -51,6 +51,8 @@
         "no-console": ["off"],
         "no-continue": ["off"],
         "no-confusing-arrow": ["off"],
+        "no-dupe-class-members": ["off"],
+        "@typescript-eslint/no-dupe-class-members": "error",
         "no-else-return": ["off"],
         "no-lonely-if": ["off"],
         "no-mixed-operators": ["off"],
