--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "music21j",
-  "version": "0.14.1",
+  "version": "0.14.3",
   "description": "A toolkit for computer-aided musicology, Javascript version",
   "main": "releases/music21.debug.js",
   "typings": "releases/main.d.ts",
@@ -74,7 +74,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/cuthbertLab/music21j.git"
+    "url": "git+https://github.com/cuthbertLab/music21j.git"
   },
   "keywords": [
     "music",
