--- a/package.json
+++ b/package.json
@@ -23,46 +23,46 @@
   "dependencies": {
     "jsonpickle": "^1.1.2",
     "midicube": "^0.6.1",
-    "vexflow": "^4.2.0"
+    "vexflow": "^4.2.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.5",
-    "@babel/eslint-parser": "7.19.1",
+    "@babel/core": "^7.22.20",
+    "@babel/eslint-parser": "7.22.15",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@babel/plugin-transform-object-assign": "^7.18.6",
-    "@babel/preset-env": "^7.20.2",
-    "@types/jquery": "^3.5.14",
+    "@babel/preset-env": "^7.22.20",
+    "@types/jquery": "^3.5.19",
     "@types/qunit": "^2.19.3",
-    "@typescript-eslint/eslint-plugin": "^5.46.1",
-    "@typescript-eslint/parser": "^5.46.1",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
     "ajv": "^8.11.2",
-    "babel-loader": "^9.1.0",
-    "core-js": "^3.26.1",
+    "babel-loader": "^9.1.3",
+    "core-js": "^3.32.2",
     "css-loader": "^6.7.2",
-    "eslint": "^8.29.0",
+    "eslint": "^8.49.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-webpack-plugin": "^3.2.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-webpack-plugin": "^4.0.1",
     "exports-loader": "^4.0.0",
-    "glob": "^8.0.3",
+    "glob": "^10.3.4",
     "grunt": "^1.5.3",
     "grunt-bump": "0.8.0",
     "grunt-cli": "^1.4.3",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-qunit": "^6.2.1",
+    "grunt-contrib-qunit": "6.2.1",
     "grunt-contrib-watch": "^1.1.0",
-    "grunt-eslint": "^24.0.1",
+    "grunt-eslint": "^24.3.0",
     "grunt-git": "^1.1.1",
     "grunt-jsdoc": "^2.4.1",
-    "grunt-webpack": "^5.0.0",
+    "grunt-webpack": "^6.0.0",
     "jsdoc": "^4.0.0",
-    "npm-check-updates": "^16.5.6",
+    "npm-check-updates": "^16.14.3",
     "qunit": "^2.19.3",
     "style-loader": "^3.3.1",
-    "ts-loader": "^9.4.2",
-    "typescript": "^4.9.4",
-    "webpack": "^5.75.0"
+    "ts-loader": "^9.4.4",
+    "typescript": "^5.2.2",
+    "webpack": "^5.88.2"
   },
   "directories": {
     "test": "tests"
