Proper typing for getElementsByClass
not yet implemented for recurse()...

When getElementsByClass is passed a single Music21 class, like m21p, now the elements of the StreamIterator will be properly typed.

Note that it does not yet work on recurse() -- I want to make sure that even this change doesn't break my projects first.

.pitches is moved from NotRest to GeneralNote to match recent changes in m21p.

Mixing strings and M21Object classes in lists to getElements calls is no longer allowed.  Choose one or the other.

turn off eslint checking for dup methods.  Typescript checks this for us, and eslint does not know about overload methods.

rewrite clef.bestClef with modern looping techniques, and taking advantage of the automatic typing.  Add test, including recurse test.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -51,6 +51,7 @@
         "no-console": ["off"],
         "no-continue": ["off"],
         "no-confusing-arrow": ["off"],
+        "no-dupe-class-members": ["off"],
         "no-else-return": ["off"],
         "no-lonely-if": ["off"],
         "no-mixed-operators": ["off"],
