--- a/.gitignore
+++ b/.gitignore
@@ -75,6 +75,7 @@ node_modules/grunt-contrib-uglify/package.json
 .idea/music21j.iml
 .idea/vcs.xml
 .idea/workspace.xml
+.idea/copilot
 
 # VSCode
 *.code-workspace
