Update License Year + Skip Google Sandbox
Set up a Sandbox to use with Ubuntu 24+

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -75,6 +75,7 @@
             "error",
             {
                 "args": "none",
+                "caughtErrors": "none",
                 "varsIgnorePattern": "^_.*|^i$|^j$|^unused|^junk|^counter"
             }
         ],
@@ -82,6 +83,7 @@
             "error",
             {
                 "args": "none",
+                "caughtErrors": "none",
                 "varsIgnorePattern": "^_.*|^i$|^j$|^unused|^junk|^counter"
             }
         ],
