--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,9 +13,9 @@ jobs:
   frontend_tests:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/setup-node@v3
+    - uses: actions/setup-node@v4
       with:
-        node-version: 16
+        node-version: 18
 
     - uses: actions/checkout@v3
       with:
@@ -24,15 +24,18 @@ jobs:
     - name: Install deps
       run: npm ci
 
+    - name: Disable AppArmor for Chrome
+      run: export CHROME_DEVEL_SANDBOX=/opt/google/chrome/chrome-sandbox
+
     - name: Run frontend tests
       run: grunt test_no_watch
 
   eslint:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/setup-node@v3
+    - uses: actions/setup-node@v4
       with:
-        node-version: 16
+        node-version: 18
 
     - uses: actions/checkout@v3
       with:
