grunt to vite part 1
npm run build is working -- most important!

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,8 @@
         "declaration": true,
         "declarationMap": true,
         "declarationDir": "build",
+        "resolveJsonModule": true,
+        "esModuleInterop": true,
         "target": "es6"
     },
     "include": [
