--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "music21j",
-  "version": "0.17.14",
+  "version": "0.20.0",
   "description": "A toolkit for computer-aided musicology, Javascript version",
   "main": "releases/music21.debug.js",
   "typings": "releases/src/main.d.ts",
@@ -16,53 +16,30 @@
     "vexflow": "^4.2.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.28.0",
-    "@babel/eslint-parser": "7.28.0",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-transform-export-namespace-from": "^7.18.9",
-    "@babel/plugin-transform-object-assign": "^7.27.1",
-    "@babel/preset-env": "^7.28.0",
-    "@types/jquery": "^3.5.32",
     "@types/qunit": "^2.19.12",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
     "ajv": "^8.17.1",
-    "babel-loader": "^9.2.1",
-    "browserslist": "^4.25.1",
-    "core-js": "^3.45.0",
-    "css-loader": "^7.1.2",
     "eslint": "^9.32.0",
     "eslint-config-airbnb-extended": "^2.1.2",
-    "eslint-plugin-import": "^2.32.0",
-    "eslint-webpack-plugin": "^5.0.2",
-    "exports-loader": "^5.0.0",
-    "glob": "^11.0.3",
     "globals": "^16.3.0",
-    "grunt": "^1.6.1",
-    "grunt-bump": "0.8.0",
-    "grunt-cli": "^1.5.0",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-qunit": "6.2.1",
-    "grunt-contrib-watch": "^1.1.0",
-    "grunt-eslint": "^25.0.0",
-    "grunt-git": "^1.1.1",
-    "grunt-webpack": "^6.0.0",
     "npm-check-updates": "^18.0.1",
     "qunit": "^2.24.1",
-    "style-loader": "^3.3.4",
-    "ts-loader": "^9.5.2",
     "typescript": "^5.8.3",
-    "webpack": "^5.101.0",
-    "webpack-cli": "^5.1.4"
+    "vite": "^7.3.0",
+    "vite-plugin-checker": "^0.12.0",
+    "vitest": "^4.0.16"
   },
   "directories": {
     "test": "tests"
   },
   "scripts": {
-    "build": "webpack",
-    "prepublishOnly": "rm -rf releases; cp -rp build/ releases/; rm -rf releases/tests; rm releases/README.md",
-    "postinstall": "sh scripts/postinstall.bash",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build",
+    "build:types": "tsc -p tsconfig.json --emitDeclarationOnly",
+    "build:all": "npm run build && npm run build:types",
+    "prepublishOnly": "rm -rf releases && npm run build:all && cp -rp build/ releases/ && rm -rf releases/tests",
+    "postinstall": "sh scripts/postinstall.bash"
   },
   "repository": {
     "type": "git",
