restore most testHTML to not HMR
vite really does not like to play with many entrypoints like a library.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "include": [
         "src/**/*",
         "tests/**/*",
+        "src/global.d.ts",
     ],
     "exclude": [
         "node_modules"
